# crayon

./: .gitignore  LICENSE  README.md  biome.json  crayon_bg-2ZWIMR45.wasm  crayon_bg-5TVKLWQA.wasm  crayon_bg-MFYNDP37.wasm  crayon_bg-SJ7GZINS.wasm  event-handling.md  heterogenous-selections.md  index.html  index.js  multi-artboard-implementation.md  multi-artboard.md  undo-redo-implementation.md  undo-redo.md
.github/workflows/: gh-deploy.yml  pr-preview.yml
crayon.rs/: Cargo.toml  README.md  build.sh
crayon.rs/batteries/: Cargo.toml
crayon.rs/batteries/src/: batteries.rs  lib.rs  math.rs  point_processor.rs  transformations.rs
crayon.rs/crayon/: Cargo.toml
crayon.rs/crayon-ui/: Cargo.toml
crayon.rs/crayon-ui/src/: lib.rs  main.rs  ui_state.rs
crayon.rs/crayon/assets/documents/: default.json  two-boards.json
crayon.rs/crayon/src/: app.rs  brush_controller.rs  camera_controller.rs  constants.rs  editor_state.rs  event_sender.rs  events.rs  lib.rs  main.rs  resource.rs  state.rs  system.rs  texture.rs
crayon.rs/crayon/src/document/: loader.rs  mod.rs  thumbhash.rs
crayon.rs/crayon/src/input/: artboard_handler.rs  dispatch.rs  global_handler.rs  layer_handler.rs  mod.rs  selection.rs
crayon.rs/crayon/src/renderer/: brush.rs  camera.rs  egui_context.rs  frame_context.rs  mod.rs  pipeline.rs  render_context.rs  state.rs
crayon.rs/crayon/src/renderer/shaders/: brush.wgsl  camera.wgsl  dab.wgsl  dab_linear.wgsl  display.wgsl  paint.wgsl  paint_linear.wgsl  point.wgsl  point_linear.wgsl  quad.wgsl
crayon.rs/crayon/src/renderer/ui/: brush_preview_widget.rs  brush_size_widget.rs  clear_screen_widget.rs  color_picker_widget.rs  drawable.rs  egui_renderer.rs  fps_widget.rs  hello_points.rs  hello_widget.rs  layer_panel_widget.rs  menu_bar_widget.rs  mod.rs  renderer.rs
crayon.rs/crayon/src/renderer/ui/theme/: fonts.rs  mod.rs
crayon.rs/crayon/src/renderer/ui/theme/widgets/: color_picker.rs  constants.rs  icon_button.rs  mod.rs  pill_button.rs  slider.rs
crayon.rs/crayon/src/resources/: brush_point_queue.rs  brush_preview_state.rs  canvas_state.rs  document_state.rs  frame_time.rs  input_system.rs  launch_options.rs  mod.rs  scene_renderer.rs  stroke_state.rs
crayon.rs/crayon/src/systems/: brush_preview_update_system.rs  canvas_render_system.rs  frame_acquire_system.rs  frame_present_system.rs  frame_time_update.rs  mod.rs  paint_system.rs  tools_system.rs
crayon.rs/crayon/src/systems/ui/: color_picker_widget.rs  fps_widget.rs  mod.rs  tools.rs
crayon.rs/crayon/src/testing/: events.rs  fixtures.rs  gpu.rs  mod.rs  probe.rs
crayon.rs/crayon/src/utils/: clamp.rs  mod.rs  transform_point.rs  zoom.rs
design-docs/: brush-size-and-preview.md  template.md  tool-state-rearchitecture.md
www/: .gitignore  build.js  package-lock.json  package.json
www/public/: styles.css
www/src/: index.js
