[workspace]
resolver = "2"

members = ["crayon", "batteries"]

[workspace.dependencies]
anyhow = "1.0.99"
base64 = "0.22"
bytemuck = { version = "1.23.2", features = ["derive"] }
cgmath = "0.18"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thumbhash = "0.1"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
pollster = "0.4.0"
rfd = "0.15"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["console"] }
wgpu = "27.0.1"
winit = "0.30.12"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
debug = 2
panic = "abort"
# comment the following to profile with Instruments
strip = "debuginfo"
