[package]
name = "crayon-ui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "crayon-ui-storybook"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
egui = "0.33.2"
egui-wgpu = { version = "0.33.2", features = ["winit"] }
egui-winit = "0.33.2"
env_logger.workspace = true
pollster.workspace = true
wgpu.workspace = true
winit.workspace = true
