[package]
name = "crayon"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "crayon"
path = "./src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
batteries = { version = "0.1.0", path = "../batteries" }
bytemuck = { workspace = true }
cgmath = { workspace = true }
clap = { version = "4.6.2", features = ["derive"] }
egui = "0.33.2"
egui_extras = { version = "0.33.2", features = ["svg"] }
egui-wgpu = { version = "0.33.2", features = ["winit"] }
egui-winit = { version = "0.33.2", default-features = false }
env_logger = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
rasengan = "0.2.3"
serde = { workspace = true }
serde_json = { workspace = true }
thumbhash = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Document", "Window", "Element"] }
web-time = "1.1"
